--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ main {
     background-color: #ffff;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.102);
     position: absolute;
+    z-index: 999;
 }
 
 h1 {
@@ -58,7 +59,7 @@ h1 {
     width: 100%;
     position: absolute;
     background-color: rgba(73, 166, 233, 0.5);
-    transition: all 0.3s linear;
+    transition: all 0.1s linear;
     visibility: hidden;
 }
 
@@ -77,7 +78,7 @@ h1 {
     top: 16px;
     right: 16px;
     cursor: pointer;
-    transition: all 0.3s linear;
+    transition: all 0.1s linear;
 }
 
 path {
